# antargis

./: .gitignore  AUTHORS  Antargis2.kdev4  CMakeLists.txt  ChangeLog  INSTALL  README  README.md  TODO  dev.pp  example.cxx  example.i  generator.cpp  main.cpp  makeDebug.sh  makeRelease.sh  platform_includes.h  terrain_app.cpp
data/: theme.xml
data/gui/: antargis.icns  apple2.xcf  border0.xcf  border1.xcf  bow.xcf  build.xcf  buttontest.xcf  buttontest2.xcf  construct.xcf  dismiss.xcf  door.xcf  drop_apple.xcf  install_bg.xcf  load.xcf  map1.xcf  move.xcf  play.xcf  pointer3.xcf  recruit.xcf  rowboat.xcf  sailboat.xcf  save.xcf  shield.xcf  stats.xcf  steel0.xcf  sword.xcf  take_apple.xcf  weapon.xcf  white_border2.xcf  wood_border.xcf  zoom.xcf
data/levels/: SwampValley.antlvl  TwoIslands.antlvl
data/models/: farm.ant  (+94 more)
lib/: CMakeLists.txt  GLee.c  GLee.h  ag_algebra.cc  ag_algebra.h  ag_clip.h  ag_clip_painttarget.cc  ag_collector.cc  ag_collector.h  ag_color.cc  ag_color.h  ag_config.cc  ag_config.h  ag_fbo.cc  ag_fbo.h  ag_font.cc  ag_font.h  ag_fontengine.cc  ag_fontengine.h  ag_fs.cc  ag_fs.h  ag_gauss.h  ag_geometry.cc  ag_geometry.h  ag_geometry_inline.cc  ag_gl.h  ag_glpainter.cc  ag_glpainter.h  ag_glscreen.cc  ag_glscreen.h  ag_gltexture.cc  ag_gradient.cc  ag_kill.cc  ag_kill.h  ag_main.cc  ag_main.h  ag_message.cc  ag_message.h  ag_messageobject.cc  ag_messageobject.h  (+85 more)
lib/3dengine/: ag_glsl.cc  ag_glsl.h  ag_glwidget.cc  ag_glwidget.h  anim_mesh.cc  anim_mesh.h  anim_mesh_data.cc  anim_mesh_data.h  ant_camera.cc  ant_camera.h  ant_particle.cc  ant_particle.h  ant_projection.cc  ant_projection.h  ant_renderer.cc  ant_renderer.h  boa_3d_wireframe.cc  boa_3d_wireframe.h  engine.cc  engine.h  glsl.cc  glsl.h  headers.hh  init.cc  mesh.cc  mesh.h  mesh_2d.cc  mesh_2d.h  mesh_2d_data.cc  mesh_2d_data.h  mesh_base.cc  mesh_base.h  mesh_data.cc  mesh_data.h  mesh_optimizer.cc  mesh_optimizer.h  mesh_sort.cc  mesh_sort.h  quadtree.h  scene.cc  (+10 more)
lib/game/: README  ant_basic_game_app.cc  ant_basic_game_app.h  ant_energy_bar.cc  ant_energy_bar.h  ant_game_app.cc  ant_game_app.h  ant_hero_faces.cc  ant_hero_faces.h  ant_layout_creators.cc  ant_layout_creators.h  entity.cc  entity.h  entptr.cc  entptr.h  gl_app.cc  gl_app.h  headers.hh  height_map.cc  height_map.h  heuristic.h  init.cc  jobs.cc  jobs.h  map.cc  map.h  minimap.cc  minimap.h  path.cc  path.h  path_vector_sort.h  resource.cc  resource.h  templates.i  terrain.cc  terrain.h  terrain_complex.h  water.cc
lib/game/entities/: .ant_hero.cc.kate-swp  .ant_selectable_entity.cc.kate-swp  ant_animal.cc  ant_animal.h  ant_boat.cc  ant_boat.h  ant_boss.cc  ant_boss.h  ant_bush.cc  ant_bush.h  ant_colored_mesh.cc  ant_colored_mesh.h  ant_decal.cc  ant_decal.h  ant_dwelling.cc  ant_dwelling.h  ant_entity_selector.h  ant_farm.cc  ant_farm.h  ant_field.cc  ant_field.h  ant_fire.cc  ant_fire.h  ant_fish.cc  ant_fish.h  ant_grass.cc  ant_grass.h  ant_grass_mesh.cc  ant_grass_mesh.h  ant_grave.cc  ant_grave.h  ant_hero.cc  ant_hero.h  ant_house.cc  ant_house.h  ant_man.cc  ant_man.h  ant_mill.cc  ant_mill.h  ant_mine.cc  (+23 more)
lib/game/formations/: ant_formation.cc  ant_formation.h  ant_formation_block.cc  ant_formation_block.h  ant_formation_rest.cc  ant_formation_rest.h  ant_formation_singlepos.cc  ant_formation_singlepos.h
lib/game/hljobs/: ant_hljob.cc  ant_hljob.h  ant_hljob_dismiss.cc  ant_hljob_dismiss.h  ant_hljob_drop.cc  ant_hljob_drop.h  ant_hljob_fetching.cc  ant_hljob_fetching.h  ant_hljob_fight_animal.cc  ant_hljob_fight_animal.h  ant_hljob_fighting.cc  ant_hljob_fighting.h  ant_hljob_gather_and_do.cc  ant_hljob_gather_and_do.h  ant_hljob_moving.cc  ant_hljob_moving.h  ant_hljob_pickup_from.cc  ant_hljob_pickup_from.h  ant_hljob_recruit.cc  ant_hljob_recruit.h  ant_hljob_rest.cc  ant_hljob_rest.h  ant_hljobs_create.cc  ant_hljobs_create.h
lib/game/path/: ant_path_finder_complete.cc  ant_path_finder_complete.h  heuristic.cc  path.cc  path.h
lib/game/players/: ant_human_player.cc  ant_human_player.h  ant_player.cc  ant_player.h  ant_players.cc  ant_players.h
lib/game/scene/: terrain.cc  terrain.h  terrain_complex.cc  water.cc  water.h
lib/game/tests/: test_vector_sort.cc
lib/game/widgets/: ant_action_widget.cc  ant_action_widget.h  ant_energy_bar.cc  ant_energy_bar.h  ant_hero_faces.cc  ant_hero_faces.h  minimap.cc
lib/generator/: fluid_simulation.cc  fluid_simulation.h  generator.cc  generator.h  generator_erosion.h  generator_map.cc  generator_map.h  generator_viewer.cc  generator_viewer.h  grid_2d.h  grid_2d.h_old  math_util.h  perlin_noise.cc  perlin_noise.h  simulation_state.h
lib/gui/: README  ag_application.cc  ag_application.h  ag_background.cc  ag_background.h  ag_border.cc  ag_border.h  ag_button.cc  ag_button.h  ag_caption.cc  ag_caption.h  ag_cell.cc  ag_cell.h  ag_checkbox.cc  ag_checkbox.h  ag_colorbutton.cc  ag_colorbutton.h  ag_combo.cc  ag_combo.h  ag_edit.cc  ag_edit.h  ag_frame.cc  ag_frame.h  ag_gradient.cc  ag_gradient.h  ag_image.cc  ag_image.h  ag_layout.cc  ag_layout.h  ag_layoutcreators.cc  ag_layoutfactory.cc  ag_layoutfactory.h  ag_listbox.cc  ag_listbox.h  ag_local.cc  ag_local.h  ag_menu.cc  ag_menu.h  ag_menuitem.cc  ag_menuitem.h  (+27 more)
lib/sound/: ag_mixer.cc  ag_mixer.h  ag_sound.h  ant_sound.cc  ant_sound.h  headers.hh  init.cc
lib/story/: description.rb  jobs.rb  proto.rb  simplemind.rb
lib/video/: ag_clip.cc  ag_clip.h  ag_clip_painttarget.cc  ag_clip_painttarget.h  ag_color.cc  ag_color.h  ag_draw.h  ag_fbo.cc  ag_fbo.h  ag_font.cc  ag_font.h  ag_fontengine.cc  ag_fontengine.h  ag_glpainter.cc  ag_glpainter.h  ag_glscreen.cc  ag_glscreen.h  ag_gltexture.cc  ag_gltexture.h  ag_gradient.cc  ag_painter.cc  ag_painter.h  ag_painttarget.h  ag_png.cc  ag_png.h  ag_projection.cc  ag_projection.h  ag_rendercontext.cc  ag_rendercontext.h  ag_screen.cc  ag_screen.h  ag_sdlpainter.cc  ag_sdlpainter.h  ag_sdlscreen.cc  ag_sdlscreen.h  ag_sdlsurface.h  ag_sgeexport.h  ag_surface.cc  ag_surface.h  ag_surface_internal.cc  (+18 more)
test/: CMakeLists.txt  gl_test.cc  test.cc  test_hl_fight_job.cc
(+114 files in other folders)
